crates/core/tests/snapshots/response_snapshots__incomplete_stream.snap
---
source: crates/core/tests/response_snapshots.rs
expression: "frames(&[created(),\njson!({ \"type\": \"response.output_text.delta\", \"delta\": \"It was cut \" }),\njson!({\n    \"type\": \"response.incomplete\", \"response\":\n    {\n        \"id\": \"resp_1\", \"incomplete_details\":\n        { \"reason\": \"max_output_tokens\" },\n    },\n}),])"
---
{"type":"message_start","message":{"id":"msg_snapshot","type":"message","role":"assistant","model":"claude-sonnet-5","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"text","text":""}}
{"type":"content_block_delta","index":0,"delta":{"type":"text_delta","text":"It was cut "}}
{"type":"content_block_stop","index":0}
{"type":"message_delta","delta":{"stop_reason":"max_tokens","stop_sequence":null},"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}
{"type":"message_stop"}
