crates/core/tests/snapshots/response_snapshots__reasoning_then_text_stream.snap
---
source: crates/core/tests/response_snapshots.rs
expression: "frames(&[created(),\njson!({\n    \"type\": \"response.reasoning_summary_text.delta\", \"delta\": \"Considering.\"\n}), json!({ \"type\": \"response.output_text.delta\", \"delta\": \"Done.\" }),\ncompleted(),])"
---
{"type":"message_start","message":{"id":"msg_snapshot","type":"message","role":"assistant","model":"claude-sonnet-4","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"thinking","thinking":""}}
{"type":"content_block_delta","index":0,"delta":{"type":"thinking_delta","thinking":"Considering."}}
{"type":"content_block_stop","index":0}
{"type":"content_block_start","index":1,"content_block":{"type":"text","text":""}}
{"type":"content_block_delta","index":1,"delta":{"type":"text_delta","text":"Done."}}
{"type":"content_block_stop","index":1}
{"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"input_tokens":100,"output_tokens":12,"cache_creation_input_tokens":0,"cache_read_input_tokens":400}}
{"type":"message_stop"}
